#ifndef NORMAL_MODE_H
#define NORMAL_MODE_H

#include "../commands/basic_movement.h"
#include "../commands/change_mode.h"
#include "../commands/command.h"
#include "../commands/edit.h"
#include "../string.h"
#include "operating_mode.h"
#include <memory>
#include <vector>

class NormalMode : public OperatingMode {
  public:
    String name = "NORMAL";
    std::vector<std::unique_ptr<Command>> commands;

    NormalMode(Editor &editor) : OperatingMode(editor, true) {
        commands.push_back(std::make_unique<MoveLeft>(editor, "h", false));
        commands.push_back(std::make_unique<MoveRight>(editor, "l", false));
        commands.push_back(std::make_unique<MoveDown>(editor, "j", false));
        commands.push_back(std::make_unique<MoveUp>(editor, "k", false));
        commands.push_back(std::make_unique<MoveNextWord>(editor, "w", false));
        commands.push_back(std::make_unique<MovePrevWord>(editor, "b", false));
        commands.push_back(std::make_unique<MoveEndBuf>(editor, "G", false));
        commands.push_back(std::make_unique<MoveBeginBuf>(editor, "gg", false));
        commands.push_back(std::make_unique<MoveEndLine>(editor, "$", false));
        commands.push_back(std::make_unique<MoveBeginLine>(editor, "-", false));
        commands.push_back(std::make_unique<ChangeToInsertMode>(editor, "a", false));
        commands.push_back(std::make_unique<ChangeToInsertMode>(editor, "A", false));
        commands.push_back(std::make_unique<ChangeToInsertMode>(editor, "i", false));
        commands.push_back(std::make_unique<ChangeToInsertMode>(editor, "I", false));
        commands.push_back(std::make_unique<ChangeToVisualMode>(editor, "v", false));
        commands.push_back(std::make_unique<ChangeToVisualMode>(editor, "V", false));
        commands.push_back(std::make_unique<CutSymbol>(editor, "x", false));
        commands.push_back(std::make_unique<CutLine>(editor, "dd", false));
        commands.push_back(std::make_unique<CutLine>(editor, "D", false));
        commands.push_back(std::make_unique<Paste>(editor, "p", false));
        commands.push_back(std::make_unique<YankLine>(editor, "y", false));
        commands.push_back(std::make_unique<UndoCmd>(editor, "u", false));
        commands.push_back(std::make_unique<NewLineAfterAndInsert>(editor, "o", false));
        commands.push_back(std::make_unique<NewLineBeforeAndInsert>(editor, "O", false));
        commands.push_back(std::make_unique<SaveQuit>(editor, ":q\n", false));
        commands.push_back(std::make_unique<SaveQuit>(editor, ":wq\n", false));
        commands.push_back(std::make_unique<SaveQuit>(editor, ":w\n", false));
    };
    ~NormalMode() = default;
    void exit() const override;
    void handle_input(String str) const override;
};

#endif